deploy/ux-portal-deploy/ux-portal-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mo-ux
  labels:
    mo-ux: true
spec:
  selector:
    matchLabels:
      mo-ux: true
  template:
    metadata:
      labels:
        mo-ux: true
    spec:
      containers:
      - name: mo-uxrequest
        image: jpgouigoux/mo-uxrequest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: HTTP
          protocol: TCP
        resources:
          requests:
            cpu: 150m
            memory: 20Mi
      - name: mo-portal
        image: jpgouigoux/mo-portal
        ports:
        - containerPort: 80            
          name: HTTP
          protocol: TCP        
        resources:
          limits:
            memory: 170Mi
          requests:
            cpu: 100m
            memory: 70Mi
